objects/Request__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Build_Unit_Test__c</fullName>
        <description>Estimation in hours of the Actual Build &amp; Unit Test phase</description>
        <inlineHelpText>Estimation in hours of the Actual Build &amp; Unit Test phase</inlineHelpText>
        <label>Actual Build &amp; Unit Test</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Design__c</fullName>
        <description>Estimation in hours of the actual design phase</description>
        <inlineHelpText>Estimation in hours of the actual design phase</inlineHelpText>
        <label>Actual Design</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_SIT__c</fullName>
        <description>Estimation in hours of the actual SIT phase</description>
        <inlineHelpText>Estimation in hours of the actual SIT phase</inlineHelpText>
        <label>Actual SIT</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adapt_Ongoing_Support__c</fullName>
        <description>Estimation in hours of the adaptation &amp; ongoing support requirements</description>
        <inlineHelpText>Estimation in hours of the adaptation &amp; ongoing support requirements</inlineHelpText>
        <label>Adapt &amp; Ongoing Support</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Awaiting_Answer__c</fullName>
        <description>Please indicate if you are awaiting an answer from another team (internal customer, stakeholder or other)</description>
        <inlineHelpText>Please indicate if you are awaiting an answer from another team (internal customer, stakeholder or other)</inlineHelpText>
        <label>Awaiting Answer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Board_of_Change__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Change Request to be approved by the Board of Change</description>
        <inlineHelpText>A Change Request needs to be validated by the Board of Change (BoC) if
•	It needs more than 0.5 man days of external resources for implementation
•	It goes against basic rules and principles</inlineHelpText>
        <label>Board of Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Build_Unit_Test__c</fullName>
        <description>Estimation in hours of the build and unit test phase</description>
        <inlineHelpText>Estimation in hours of the build and unit test phase</inlineHelpText>
        <label>Build &amp; Unit Test</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Benefit_Value__c</fullName>
        <description>Please rate the business value priority (1 is the highest value, 3 is the lowest)</description>
        <inlineHelpText>Please rate the business value priority (1 is the highest value, 3 is the lowest)</inlineHelpText>
        <label>Business Benefit Value</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Benefit__c</fullName>
        <label>Business Benefit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Comments__c</fullName>
        <label>Closed Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommunicationTrainingPlan__c</fullName>
        <label>Communication &amp; Training Plan</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ConfigEffort__c</fullName>
        <description>Build effort In days (Salesforce configuration)</description>
        <label>Config Effort</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Critical_Flag__c</fullName>
        <description>Displays a red flag when the mark as critical checkbox has been ticked. Used to facilitate the identification of critical subjects in list views and reports.</description>
        <formula>IMAGE(IF( MarkasCritical__c,&quot;/servlet/servlet.FileDownload?file=015A00000011ml2&quot;,&quot;/servlet/servlet.FileDownload?file=015A00000011mkq&quot;),&quot;Not Critical&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays a red flag when the mark as critical checkbox has been ticked. Used to facilitate the identification of critical subjects in list views and reports.</inlineHelpText>
        <label>Critical Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaysSinceDetected__c</fullName>
        <formula>TODAY() -  Detection_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since detected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DecisionDeadline__c</fullName>
        <description>Please indicate the deadline date at which the defaut decision will be taken if no other options are given</description>
        <inlineHelpText>Please indicate the deadline date at which the defaut decision will be taken if no other options are given</inlineHelpText>
        <label>Decision Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Maker__c</fullName>
        <description>Please enter the name of the decision maker</description>
        <inlineHelpText>Please enter the name of the decision maker</inlineHelpText>
        <label>Decision Maker</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <label>Decision</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Default_Decision_after_deadline__c</fullName>
        <description>Details the default decision that will be taken after the deadline date given</description>
        <inlineHelpText>Details the default decision that will be taken after the deadline date given</inlineHelpText>
        <label>Default Decision (after deadline)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deployment__c</fullName>
        <description>Links request to a deployment</description>
        <label>Deployment</label>
        <referenceTo>Deployment__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Please give further detail of request.  You can also add images such as a screenshot if necessary to support your request</description>
        <inlineHelpText>Please give further detail of request.  You can also add images such as a screenshot if necessary to support your request</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Design_Status__c</fullName>
        <label>Design Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Designed</fullName>
                </value>
                <value>
                    <fullName>Mocked-Up</fullName>
                </value>
                <value>
                    <fullName>Out of scope</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Design__c</fullName>
        <description>Estimation in hours of the design required</description>
        <inlineHelpText>Estimation in hours of the design required</inlineHelpText>
        <label>Design</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Detection_Date__c</fullName>
        <label>Detection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DevEffort__c</fullName>
        <description>Dev effort In days (Salesforce configuration)</description>
        <inlineHelpText>In days</inlineHelpText>
        <label>Dev Effort</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Development_Type__c</fullName>
        <description>Please indicate the type of development proposed</description>
        <inlineHelpText>Please indicate the type of development proposed</inlineHelpText>
        <label>Development Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Value 1</fullName>
                </value>
                <value>
                    <fullName>General Settings</fullName>
                </value>
                <value>
                    <fullName>Develop (APEX/Visualforce)</fullName>
                </value>
                <value>
                    <fullName>Out of the Box</fullName>
                </value>
                <value>
                    <fullName>Customise Existing Object</fullName>
                </value>
                <value>
                    <fullName>Create New Object</fullName>
                </value>
                <value>
                    <fullName>Create Report Type</fullName>
                </value>
                <value>
                    <fullName>Create Workflow &amp; Approval</fullName>
                </value>
                <value>
                    <fullName>Create Validation rules</fullName>
                </value>
                <value>
                    <fullName>Apexchange</fullName>
                </value>
                <value>
                    <fullName>Interface</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DocEffort__c</fullName>
        <description>Doc effort In days (Salesforce configuration)</description>
        <label>Doc Effort</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpectedBenefitsBusinessImpact__c</fullName>
        <description>Please give a brief description of what the expected benefits or the business impact should this request be implemented</description>
        <inlineHelpText>Please give a brief description of what the expected benefits would be should this request be implemented</inlineHelpText>
        <label>Expected Benefits / Business Impact</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Expected_Due_Date__c</fullName>
        <inlineHelpText>Resolution/Activation date</inlineHelpText>
        <label>Expected Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Impact__c</fullName>
        <description>Please indicate the expected impact on end users and the necessary level of change management</description>
        <inlineHelpText>Please indicate the expected impact on end users and the necessary level of change management</inlineHelpText>
        <label>Expected Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Impact</fullName>
                </value>
                <value>
                    <fullName>Very Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Important</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_cost_days__c</fullName>
        <description>Nb of days of external ressources to implement the change</description>
        <inlineHelpText>Design/Build/Test/Migration</inlineHelpText>
        <label>External cost (days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fast_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Change request to be executed quickly</description>
        <label>Fast Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account Plan</fullName>
                </value>
                <value>
                    <fullName>Accounts</fullName>
                </value>
                <value>
                    <fullName>Activities</fullName>
                </value>
                <value>
                    <fullName>Administration Setup</fullName>
                </value>
                <value>
                    <fullName>Answers</fullName>
                </value>
                <value>
                    <fullName>Assessment</fullName>
                </value>
                <value>
                    <fullName>Assets</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Campaigns</fullName>
                </value>
                <value>
                    <fullName>Cases</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Communication Templates</fullName>
                </value>
                <value>
                    <fullName>Company Profile</fullName>
                </value>
                <value>
                    <fullName>Console</fullName>
                </value>
                <value>
                    <fullName>Contacts</fullName>
                </value>
                <value>
                    <fullName>Content Deliveries</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>Create</fullName>
                </value>
                <value>
                    <fullName>Critical Updates</fullName>
                </value>
                <value>
                    <fullName>Data Categories</fullName>
                </value>
                <value>
                    <fullName>Data Management</fullName>
                </value>
                <value>
                    <fullName>Deploy</fullName>
                </value>
                <value>
                    <fullName>Desktop Administration</fullName>
                </value>
                <value>
                    <fullName>Develop</fullName>
                </value>
                <value>
                    <fullName>Email Administration</fullName>
                </value>
                <value>
                    <fullName>Forecasts</fullName>
                </value>
                <value>
                    <fullName>Google Apps</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Ideas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impact_Description__c</fullName>
        <description>If this risk should occur, what is the expected impact to the project</description>
        <inlineHelpText>If this risk should occur, what is the expected impact to the project</inlineHelpText>
        <label>Impact Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nice to Have</fullName>
                </value>
                <value>
                    <fullName>1 - Very low</fullName>
                </value>
                <value>
                    <fullName>2 - Low</fullName>
                </value>
                <value>
                    <fullName>3 - Medium</fullName>
                </value>
                <value>
                    <fullName>4 - High</fullName>
                </value>
                <value>
                    <fullName>Blocking</fullName>
                </value>
                <value>
                    <fullName>Frustration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impacts_user_guides__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please indicate if this change would require an update to end user manuals</description>
        <inlineHelpText>Please indicate if this change would require an update to end user manuals</inlineHelpText>
        <label>Impacts user guides?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InDesignDoc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SR0 - Checked when requirement has been taken into account in the Design Document</description>
        <label>In Design Doc?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_cost_days__c</fullName>
        <description>Nb of days for internal ressources to implement the change</description>
        <inlineHelpText>Design/Build/Test/Migration</inlineHelpText>
        <label>Internal cost (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <description>Please enter a short keyword to define the request</description>
        <inlineHelpText>Please enter a short keyword to define the request</inlineHelpText>
        <label>Keyword</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_of_Effort_Value__c</fullName>
        <description>Please rate the urgency of level of effort value priority (1 is the highest value, 3 is the lowest)</description>
        <inlineHelpText>Please rate the urgency of level of effort value priority (1 is the highest value, 3 is the lowest)</inlineHelpText>
        <label>Level of Effort Value</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_of_Effort__c</fullName>
        <label>Level of Effort</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarkasCritical__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to flag as critical (business stopping) in order to escalate to executive steering committee level. Records flagged as critical appear in prioritised reports &amp; dashboards</description>
        <inlineHelpText>Used to flag as critical (business stopping) in order to escalate to executive steering committee level. Records flagged as critical appear in prioritised reports &amp; dashboards</inlineHelpText>
        <label>Escalation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maturity__c</fullName>
        <label>Maturity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sufficient Detail to Design</fullName>
                </value>
                <value>
                    <fullName>Insufficient Detail to Design</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OlderThan15Days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Older than 15 days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Others__c</fullName>
        <label>Others</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Contingency__c</fullName>
        <description>Please give an estimate of the possible contingency</description>
        <inlineHelpText>Please give an estimate of the possible contingency</inlineHelpText>
        <label>Overall Contingency (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The current owner of the Change Request</description>
        <inlineHelpText>The owner changes depending on the status</inlineHelpText>
        <label>Accountable</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Please prioritise the issue into one of the following classifications</description>
        <inlineHelpText>Please prioritise the issue into one of the following classifications</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - no immediate impact on deadlines</fullName>
                </value>
                <value>
                    <fullName>2 - Impact on less critical deadlines</fullName>
                </value>
                <value>
                    <fullName>3 - May impact deadlines</fullName>
                </value>
                <value>
                    <fullName>4 - Will impact deadlines</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <description>Please rank the probability of this risk</description>
        <inlineHelpText>Please rank the probability of this risk</inlineHelpText>
        <label>Probability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Very Small Chance</fullName>
                </value>
                <value>
                    <fullName>2 - 25% Chance</fullName>
                </value>
                <value>
                    <fullName>3 - &gt;50% Chance</fullName>
                </value>
                <value>
                    <fullName>4 - &gt;90% Chance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProcessSystem__c</fullName>
        <label>Process/System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Stage__c</fullName>
        <description>Please indicate the stage of the project associated</description>
        <inlineHelpText>Please indicate the stage of the project associated</inlineHelpText>
        <label>Project Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PLAN</fullName>
                </value>
                <value>
                    <fullName>ANALYSE</fullName>
                </value>
                <value>
                    <fullName>DESIGN</fullName>
                </value>
                <value>
                    <fullName>BUILD</fullName>
                </value>
                <value>
                    <fullName>VALIDATE</fullName>
                </value>
                <value>
                    <fullName>DEPLOY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProposedResolution__c</fullName>
        <label>Proposed Resolution / Mitigation</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Ready_for_UAT__c</fullName>
        <description>Please indicate if the solution is ready for UAT</description>
        <inlineHelpText>Please indicate if the solution is ready for UAT</inlineHelpText>
        <label>Ready for UAT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <description>Displays an icon based on record type to facilitate working on large lists of different requests</description>
        <formula>IMAGE(CASE(  RecordTypeId  , &quot;012A0000000CO32&quot;, &quot;/servlet/servlet.FileDownload?file=015A00000011mkr&quot;, &quot;012A0000000gteT&quot;,&quot;/servlet/servlet.FileDownload?file=015A00000012qS6&quot;,&quot;012A0000000CO33&quot;, &quot;/servlet/servlet.FileDownload?file=015A00000011mkt&quot;,&quot;012A0000000CO34&quot;, &quot;/servlet/servlet.FileDownload?file=015A00000011mkv&quot;,&quot;012A0000000CO36&quot;, &quot;/servlet/servlet.FileDownload?file=015A00000011ml3&quot;,&quot;012A0000000CO37&quot;, &quot;/servlet/servlet.FileDownload?file=015A00000011ml4&quot;,&quot;012A0000000CO38&quot;, &quot;/servlet/servlet.FileDownload?file=015A00000011ml5&quot;, &quot;012A0000000CO35&quot;, &quot;/servlet/servlet.FileDownload?file=015A00000011mkx&quot;,&quot;Request Type&quot;),&quot;Request Type&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Category__c</fullName>
        <description>Please put the risk in the appropriate category</description>
        <inlineHelpText>Please put the risk in the appropriate category</inlineHelpText>
        <label>Risk Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Design / Build</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Adoption</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Score__c</fullName>
        <description>This score is proposed automatically based on the level of probability and the impact once you save the record.  You may override by selecting a different value.</description>
        <inlineHelpText>This score is proposed automatically based on the level of probability and the impact once you save the record.  You may override by selecting a different value.</inlineHelpText>
        <label>Risk Score (proposed automatically)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <description>Please classify the response into the appropriate category</description>
        <inlineHelpText>Please classify the response into the appropriate category</inlineHelpText>
        <label>Response Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Avoid</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Mitigate</fullName>
                </value>
                <value>
                    <fullName>Accept</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SIT__c</fullName>
        <description>Estimation in hours of the SIT phase</description>
        <inlineHelpText>Estimation in hours of the SIT phase</inlineHelpText>
        <label>SIT</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Satisfaction__c</fullName>
        <description>Give a satisfaction score out of ten based on the end user comments</description>
        <inlineHelpText>Give a satisfaction score out of ten based on the end user comments</inlineHelpText>
        <label>Satisfaction</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <description>Please indicate the level of severity of this particular issue</description>
        <inlineHelpText>Please indicate the level of severity of this particular issue</inlineHelpText>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Minimal impact on major deliverables</fullName>
                </value>
                <value>
                    <fullName>2 - impact limited to partial deliverable</fullName>
                </value>
                <value>
                    <fullName>3 - Impact major deliverable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Approach__c</fullName>
        <description>Please add any detail on the solution approach</description>
        <inlineHelpText>Please add any detail on the solution approach</inlineHelpText>
        <label>Solution Approach</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StatusFlag__c</fullName>
        <description>To finalise: the objective of this field is to group status into three logical groups for all requests - red, orange and green.  Red for not started / rejected, orange for in progress, under consideration and green for closed, approved.   This is also to match logic in user stories</description>
        <formula>IMAGE(CASE(  Status__c , &quot;Under consideration&quot;, &quot;/servlet/servlet.FileDownload?file=015A00000011ml6&quot;,&quot;Under consideration&quot;, &quot;/servlet/servlet.FileDownload?file=015A00000011ml6&quot;,&quot;In discussion / specifying&quot;,&quot;/servlet/servlet.FileDownload?file=015A00000011ml6&quot;, &quot;Approved - Implement / In Scope&quot;, &quot;/servlet/servlet.FileDownload?file=015A00000011mkp&quot;, &quot;Closed*&quot;, &quot;/servlet/servlet.FileDownload?file=015A00000011mks&quot;,&quot;/servlet/servlet.FileDownload?file=015A00000011mku&quot;),&quot;Current Status&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Update_Comment__c</fullName>
        <description>Allows user to quick quick update.  Limited to 255 characters to allow history tracking and chatter feeds with exact text</description>
        <inlineHelpText>Allows user to quick quick update.  Limited to 255 characters to allow history tracking and chatter feeds with exact text</inlineHelpText>
        <label>Status Update Comment</label>
        <type>TextArea</type>
    </fields>
</CustomObject>